added a start point

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "File Metadata Microservice",
   "main": "app.js",
   "scripts": {
-    "entry point": "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
